param tuning, minor optimizations